--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,6 +88,15 @@
     font-size: 20px;
   }
 
+  .green-box {
+    background-color: #94d08a;
+    padding: 50px 50px 20px 50px;
+    color: black;
+    width: 450px;
+    text-align: center;
+    font-size: 20px;
+  }
+
   .concept-box {
     background-color: white;
     filter:alpha(opacity=60); /* IE */
