--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,3 +111,16 @@
     font-family: 'Chalkduster';
     color: black;
   }
+
+  .footer-over {
+    padding: 15px 30px 0px 30px; 
+    float: right; 
+    font-family: 'Chalkduster';
+    color: black;
+    background-color: white;
+    filter:alpha(opacity=60); /* IE */
+    -moz-opacity:0.6; /* Mozilla */
+    opacity: 0.6; /* CSS3 */
+    width: 100%;
+    text-align: right;
+  }
