--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,120 +1,141 @@
-  @font-face {
-    font-family: 'Orator Std';
-    src: url('../fonts/OratorStd.eot');
-    src: url('../fonts/OratorStd.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/OratorStd.woff2') format('woff2'),
-      url('../fonts/OratorStd.woff') format('woff'),
-      url('../fonts/OratorStd.ttf') format('truetype'),
-      url('../fonts/OratorStd.svg#OratorStd') format('svg');
-    font-weight: 500;
-    font-style: normal;
-  }
+@font-face {
+  font-family: 'Orator Std';
+  src: url('../fonts/OratorStd.eot');
+  src: url('../fonts/OratorStd.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OratorStd.woff2') format('woff2'),
+    url('../fonts/OratorStd.woff') format('woff'),
+    url('../fonts/OratorStd.ttf') format('truetype'),
+    url('../fonts/OratorStd.svg#OratorStd') format('svg');
+  font-weight: 500;
+  font-style: normal;
+}
 
-  @font-face {
-    font-family: 'Chalkduster';
-    src: url('../fonts/Chalkduster.eot');
-    src: url('../fonts/Chalkduster.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Chalkduster.woff2') format('woff2'),
-      url('../fonts/Chalkduster.woff') format('woff'),
-      url('../fonts/Chalkduster.ttf') format('truetype'),
-      url('../fonts/Chalkduster.svg#Chalkduster') format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
+@font-face {
+  font-family: 'Chalkduster';
+  src: url('../fonts/Chalkduster.eot');
+  src: url('../fonts/Chalkduster.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Chalkduster.woff2') format('woff2'),
+    url('../fonts/Chalkduster.woff') format('woff'),
+    url('../fonts/Chalkduster.ttf') format('truetype'),
+    url('../fonts/Chalkduster.svg#Chalkduster') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
-  body {
-    font-family: 'Orator Std';
-  }
-  .starter-template {
-    padding: 40px 15px;
-    text-align: center;
-  }
+body {
+  font-family: 'Orator Std';
+}
 
-  /* Navigation bar */
+.wrap-container {
+  position: relative;
+  max-width: 1170px; 
+  display: block; 
+  margin: 0 auto;
+}
 
-  @media (min-width: 768px) {
-    .container>.navbar-header {
-      margin-right: 150px;
-    }
-  }
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
 
-  .navbar-nav>li>a {
-    color: black;
-    font-size: 16px;
-  }
+/* Navigation bar */
 
-  .icon-bar {
-    background-color: black;
-  }
-
-  .nav>li>a {
-    padding-right: 25px;
-    padding-left: 25px;
-  }
-
+@media (max-width: 768px) {
   .nav-over {
-    margin-top: 60px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
+    padding-left: 15px  !important;
   }
+}
 
-  .nav-bg {
-    margin-top: 50px;
-    position: absolute;
-    top: 0px;
-    background-color: white;
-    filter:alpha(opacity=60); /* IE */
-    -moz-opacity:0.6; /* Mozilla */
-    opacity: 0.6; /* CSS3 */
-    right: 0px;
-    height: 70px;
-    width: 100%;
+@media (min-width: 768px) {
+  .container>.navbar-header {
+    margin-right: 150px;
   }
+}
 
-  /**/
+.navbar-nav>li>a {
+  color: black;
+  font-size: 16px;
+}
 
-  .black-box {
-    background-color: black;
-    padding: 40px 70px 35px 70px;
-    color: white;
-    display: inline-block;
-    font-size: 20px;
-  }
+.icon-bar {
+  background-color: black;
+}
 
-  .green-box {
-    background-color: #94d08a;
-    padding: 50px 50px 20px 50px;
-    color: black;
-    width: 450px;
-    text-align: center;
-    font-size: 20px;
-  }
+.nav>li>a {
+  padding-right: 25px;
+  padding-left: 25px;
+}
 
-  .concept-box {
-    background-color: white;
-    filter:alpha(opacity=60); /* IE */
-    -moz-opacity:0.6; /* Mozilla */
-    opacity: 0.6; /* CSS3 */
-    padding: 20px 10px 20px 10px;
-  }
+.nav-over {
+  position: absolute;
+  top: 60px;
+  left: 0px;
+  width: 100%;
+  padding-left: 120px;
+}
 
-  .footer {
-    padding: 15px 30px 0px 30px; 
-    float: right; 
-    font-family: 'Chalkduster';
-    color: black;
-  }
+.nav-over>.container {
+  width: 100%;
+}
 
-  .footer-over {
-    padding: 15px 30px 0px 30px; 
-    float: right; 
-    font-family: 'Chalkduster';
-    color: black;
-    background-color: white;
-    filter:alpha(opacity=60); /* IE */
-    -moz-opacity:0.6; /* Mozilla */
-    opacity: 0.6; /* CSS3 */
-    width: 100%;
-    text-align: right;
-  }
+.nav-bg {
+  margin-top: 50px;
+  position: absolute;
+  top: 0px;
+  background-color: white;
+  filter:alpha(opacity=60); /* IE */
+  -moz-opacity:0.6; /* Mozilla */
+  opacity: 0.6; /* CSS3 */
+  right: 0px;
+  height: 70px;
+  width: 100%;
+}
+
+/**/
+
+.black-box {
+  background-color: black;
+  padding: 40px 70px 35px 70px;
+  color: white;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.green-box {
+  background-color: #94d08a;
+  padding: 50px 50px 20px 50px;
+  color: black;
+  width: 450px;
+  text-align: center;
+  font-size: 16px;
+}
+
+.concept-box {
+  background-color: white;
+  filter:alpha(opacity=60); /* IE */
+  -moz-opacity:0.6; /* Mozilla */
+  opacity: 0.6; /* CSS3 */
+  padding: 20px 10px 20px 10px;
+}
+
+.footer {
+  padding: 15px 30px 0px 30px; 
+  float: right; 
+  font-family: 'Chalkduster';
+  color: black;
+  font-size: 10px;
+}
+
+.footer-over {
+  padding: 15px 30px 0px 30px; 
+  float: right; 
+  font-family: 'Chalkduster';
+  color: black;
+  background-color: white;
+  filter:alpha(opacity=60); /* IE */
+  -moz-opacity:0.6; /* Mozilla */
+  opacity: 0.6; /* CSS3 */
+  width: 100%;
+  text-align: right;
+  font-size: 10px;
+}
