--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@ body {
 
 .navbar-nav>li>a {
   color: black;
-  font-size: 16px;
+  font-size: 1em;
 }
 
 .icon-bar {
@@ -98,7 +98,7 @@ body {
   padding: 40px 70px 35px 70px;
   color: white;
   display: inline-block;
-  font-size: 16px;
+  font-size: 1em;
 }
 
 .green-box {
@@ -107,7 +107,7 @@ body {
   color: black;
   width: 450px;
   text-align: center;
-  font-size: 16px;
+  font-size: 1em;
 }
 
 .concept-box {
@@ -118,16 +118,24 @@ body {
   padding: 20px 10px 20px 10px;
 }
 
+.footer-socials {
+  font-size: 1.5em; 
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+}
+
 .footer {
-  padding: 15px 30px 0px 30px; 
+  padding: 15px 30px 0px 0px; 
   float: right; 
   font-family: 'Chalkduster';
   color: black;
-  font-size: 10px;
+  font-size: 0.7em;
 }
 
 .footer-over {
-  padding: 15px 30px 0px 30px; 
+  padding: 15px 30px 0px 0px; 
   float: right; 
   font-family: 'Chalkduster';
   color: black;
@@ -137,5 +145,5 @@ body {
   opacity: 0.6; /* CSS3 */
   width: 100%;
   text-align: right;
-  font-size: 10px;
+  font-size: 0.7em;
 }
