--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,6 +89,13 @@ body {
   width: 100%;
 }
 
+/* Home */
+
+.home-top {
+  padding-top: 150px; 
+  position: relative
+}
+
 /* Box */
 
 .black-box {
@@ -158,30 +165,100 @@ body {
 }
 
 .footer {
-  padding: 15px 30px 0px 0px; 
-  float: right; 
   font-family: 'Chalkduster';
   color: black;
   font-size: 0.8em;
+  width: 100%;
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 40px;
 }
 
-.footer-over {
-  padding: 15px 30px 0px 0px; 
-  float: right; 
-  font-family: 'Chalkduster';
-  color: black;
+.white-footer {
   background-color: white;
   filter:alpha(opacity=60); /* IE */
   -moz-opacity:0.6; /* Mozilla */
   opacity: 0.6; /* CSS3 */
-  width: 100%;
-  text-align: right;
-  font-size: 0.7em;
+}
+
+.first-carte-box {
+  padding: 20px 50px 20px 50px;
+}
+
+.second-carte-box {
+  padding: 20px 50px 20px 50px;
+}
+
+.first-carte {
+  margin-left: 100px;
+  max-width: 700px;
+}
+
+.second-carte {
+  width: 650px; 
+  position: absolute; 
+  right: 100px; 
+  top: 100px;
+}
+
+.bottom-block {
+  margin-top: 30px; 
+  position: relative;
+}
+
+.collaborator-block {
+  margin: 40px 100px 40px 100px;
+}
+
+.collaborator-texts {
+  font-size: 1em;
+}
+
+.collaborator-arrow {
+  right: 50px; 
+  bottom: 90px; 
+  position: absolute; 
+  width: 30px;
+}
+
+.collaborator-left-arrow {
+  left: 50px; 
+  bottom: 90px; 
+  position: absolute; 
+  width: 30px;
 }
 
 @media (max-width: 768px) {
   .navbar-collapse {
     background-color: #fff;
+  }
+  .nav-over {
+    top: 30px;
+    z-index: 100;
+  }
+  .home-top {
+    padding-top: 100px;
+  }
+  .nav-bg {
+    margin-top: 30px;
+    height: 50px;
+  }
+  .collaborator-block {
+    margin: 30px 20px 30px 20px;
+  }
+  .collaborator-texts {
+    font-size: 0.7em;
+  }
+  .collaborator-arrow {
+    right: 40px; 
+    bottom: 40px;
+    width: 20px;
+  }
+  .collaborator-left-arrow {
+    left: 40px; 
+    bottom: 40px;
+    width: 20px;
   }
   .black-box {
     padding: 10px 10px 5px 10px !important;
@@ -222,6 +299,26 @@ body {
   .google-map>iframe {
     width: 100%;
     height: 200px;
+  }
+  .first-carte-box {
+    font-size: 0.5em;
+    padding: 20px 10px 20px 20px;
+  }
+  .second-carte-box {
+    font-size: 0.5em;
+    padding: 20px 10px 20px 60px;
+  }
+  .first-carte {
+    margin-left: 30px;
+    margin-right: 10px;
+  }
+  .second-carte {
+    width: 70%; 
+    right: 0px; 
+    top: -40px;
+  }
+  .bottom-block {
+    margin-top: 100px; 
   }
 }
 
